Integrate freesound API.

--- a/index.jade
+++ b/index.jade
@@ -39,7 +39,7 @@ html( lang="en" )
                     nav.navbar.navbar-default( role="navigation" )
                         .navbar-header
                             .input-group( style="margin-top: 10px; margin-left: 20px; margin-right: 20px;" )
-                                input( type="text", class="form-control", placeholder="Search for...", aria-describedby="basic-addon1")
+                                input#search( type="text", class="form-control", placeholder="Search for...", aria-describedby="basic-addon1" )
                                 span.input-group-btn
                                     button( class="btn btn-default", type="button") Go!
 
@@ -55,3 +55,4 @@ html( lang="en" )
     
         script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
         script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
+        script( src='main.js' )
